--- a/Assignment_1.html
+++ b/Assignment_1.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Style Personal Webpage</title>
 </head>
-<body> </body>
+<body>
+    <header>
+        <h1> Manya Rajani </h1>
+        <h3> Learning, coding, and growing every day. </h3>
+        <img src="C:\Users\manya\Downloads" alt="Profile Picture" style="border-radius: 50%; width: 150px; height: 150px;">
+    </header>
+</body>
 </html>
