--- a/Assignment_1.html
+++ b/Assignment_1.html
@@ -11,5 +11,70 @@
         <h3> Learning, coding, and growing every day. </h3>
         <img src="C:\Users\manya\Downloads" alt="Profile Picture" style="border-radius: 50%; width: 150px; height: 150px;">
     </header>
+    <h2>Contact Information</h2>
+    <ul>
+        <li> Email <a href="manya.rajani_cs24@gla.ac.in">manya.rajani_cs24@gla.ac.in</a></li>
+        <li> Phone: +91 7906801891 </li>
+        <li> LinkedIn: <a href="https://www.linkedin.com/in/manya-rajani-123456789/">Manya Rajani</a></li>
+    </ul>
+    <p>
+        My name is <b>Manya Rajani</b>, and I am a <u>Computer Science</u> student at <i>GLA University</i>.
+        I am passionate about <u>coding and technology</u>,and I am always eager to learn new skills and improve my
+        knowledge in the field of computer science. Apart from academics, I enjoy <i>reading, exploring new technologies,
+        and creative design</i>. I believe in <b>continuous learning, teamwork, and innovation</b> as the keys to success.
+            
+    </p>
+    <h2>Education</h2>
+    <table border="1" ; style="width: 100%; text-align: center;">
+        <tr>
+            <th>Year</th>
+            <th>Degree</th>
+            <th>Institute</th>
+        </tr>
+        <tr>
+            <td>2022</td>
+            <td>High School</td>
+            <td>Little Angel School</td>
+        </tr>
+        <tr>
+            <td>2024</td>
+            <td>Inter Mediate</td>
+            <td>Little Angel School</td>
+        </tr>
+        <tr>
+            <td>2024</td>
+            <td>Bachelor of Technology</td>
+            <td>GLA University</td>
+        </tr>
+    </table>    
+    <h2>Skills</h2>
+    <ul>
+        <li> HTML </li>
+        <li> CSS </li>
+        <li> Java </li>
+        <li> Python </li>
+    </ul>   
+    <h2>Projects</h2>
+    <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
+        <h3>Project 1: Personal Portfolio Website</h3>
+        <p>Developed a personal portfolio website using HTML to showcase my skills and projects.</p>
+    </div> 
+    <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
+        <h3>Project 2: Simple Calculator</h3>
+        <p>Created a simple calculator application using Java to perform basic arithmetic operations.</p>
+    </div>
+    <h2>Hobbies</h2>
+    <ul>
+        <li>🎵 Listening to music</li>
+        <li>✈️ Traveling & exploring new places</li>
+        <li>🍳 Cooking & trying new recipes</li>
+        <li>📚 Reading books & articles</li>
+        <li>🌱 Gardening & nature walks</li>
+        <li>🧩 Solving puzzles & brain teasers</li>
+        <li>🧗‍♀️ Adventure sports & challenges</li>
+    </ul>
+    <footer>
+        <p>© 2024 Manya Rajani. All rights reserved.</p>
+    </footer>
 </body>
 </html>
